# stimcircuit

./: Cargo.toml  README.md
examples/: basic.rs  unrolling.rs
src/: circuit.rs  gate.rs  lib.rs  stim.pest  stim_parser.rs
