[package]
name = "stimcircuit"
version = "0.1.0"
edition = "2021"
authors = ["Aleks Kissinger <aleks0@gmail.com>"]
keywords = ["quantum computing"]
categories = ["science"]
homepage = "https://github.com/akissinger/stimcircuit"
repository = "https://github.com/akissinger/stimcircuit"
rust-version = "1.81"
license = "Apache-2.0"

[dependencies]
num = "0.4.3"
pest = "2.8.6"
pest_derive = "2.8.6"

